<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtDUI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/txtDUI"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="20sp"
            tools:ems="10" />
        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="20sp"
            tools:ems="10" />

        <EditText
            android:id="@+id/txtValorHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/txtValorHora2"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="20sp"
            tools:ems="10" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:hint="@string/txtSelectHoras"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/txtSelectAutoComplete"></AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/procesar_informacion"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="603dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>